--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2173,6 +2173,144 @@
    "source": [
     "day18part2(final_lava_scan)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 20: Grove Positioning System"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_file = [1, 2, -3, 3, -2, 0, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day20part1(file: list):\n",
+    "    numbers = [*enumerate(file)]\n",
+    "    for n in copy.copy(numbers):\n",
+    "        curr_idx = numbers.index(n)\n",
+    "        numbers.pop(curr_idx)\n",
+    "        numbers.insert((curr_idx+n[1]) % len(numbers), n)\n",
+    "    idx_zero = [n for _, n in numbers].index(0)\n",
+    "    sum = 0\n",
+    "    for p in [1000, 2000, 3000]:\n",
+    "        sum += numbers[(idx_zero+p) % len(numbers)][1]\n",
+    "    return(sum)\n",
+    "\n",
+    "day20part1(test_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7584"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_file = [int(number) for number in file_to_list(\"./inputs/input20.txt\")]\n",
+    "day20part1(final_file)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1623178306"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day20part2(file: list):\n",
+    "    numbers = [(idx, num*811589153) for idx, num in enumerate(file)]\n",
+    "    for n in copy.copy(numbers) * 10:\n",
+    "        curr_idx = numbers.index(n)\n",
+    "        numbers.pop(curr_idx)\n",
+    "        numbers.insert((curr_idx+n[1]) % len(numbers), n)\n",
+    "    idx_zero = [n for _, n in numbers].index(0)\n",
+    "    sum = 0\n",
+    "    for p in [1000, 2000, 3000]:\n",
+    "        sum += numbers[(idx_zero+p) % len(numbers)][1]\n",
+    "    return(sum)\n",
+    "\n",
+    "day20part2(test_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4907679608191"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day20part2(final_file)"
+   ]
   }
  ],
  "metadata": {
