--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2311,6 +2311,91 @@
    "source": [
     "day20part2(final_file)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 25: Full of Hot Air"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_fuel_reqs = [\"1=-0-2\", \"12111\", \"2=0=\", \"21\", \"2=01\", \"111\", \"20012\", \"112\", \"1=-1=\", \"1-12\", \"12\", \"1=\", \"122\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2=-1=0'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def to_decimal(snafu: str):\n",
+    "    decimal = {\"=\": -2, \"-\": -1, \"0\": 0, \"1\": 1, \"2\": 2}\n",
+    "    number = 0\n",
+    "    for i, digit in enumerate(snafu[::-1]):\n",
+    "        number += 5**i * decimal.get(digit)\n",
+    "    return number\n",
+    "\n",
+    "def to_snafu(decimal: int):\n",
+    "    snafu = {0: \"=\", 1: \"-\", 2: \"0\", 3: \"1\", 4: \"2\"}\n",
+    "    number = \"\"\n",
+    "    while decimal > 0:\n",
+    "        exp = (decimal+2) % 5\n",
+    "        number = snafu.get(exp) + number\n",
+    "        decimal = (decimal+2) // 5\n",
+    "    return number\n",
+    "\n",
+    "def day25part1(fuel_reqs: list):\n",
+    "    return to_snafu(sum([to_decimal(snafu) for snafu in fuel_reqs]))\n",
+    "\n",
+    "day25part1(test_fuel_reqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2=0--0---11--01=-100'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_fuel_reqs = file_to_list(\"./inputs/input25.txt\")\n",
+    "day25part1(final_fuel_reqs)"
+   ]
   }
  ],
  "metadata": {
