--- a/2022/2022.ipynb
+++ b/2022/2022.ipynb
@@ -2317,6 +2317,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Day 21: Monkey Math\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_monkey_script = [\n",
+    "    \"root: pppw + sjmn\",\n",
+    "    \"dbpl: 5\",\n",
+    "    \"cczh: sllz + lgvd\",\n",
+    "    \"zczc: 2\",\n",
+    "    \"ptdq: humn - dvpt\",\n",
+    "    \"dvpt: 3\",\n",
+    "    \"lfqf: 4\",\n",
+    "    \"humn: 5\",\n",
+    "    \"ljgn: 2\",\n",
+    "    \"sjmn: drzm * dbpl\",\n",
+    "    \"sllz: 4\",\n",
+    "    \"pppw: cczh / lfqf\",\n",
+    "    \"lgvd: ljgn * ptdq\",\n",
+    "    \"drzm: hmdt - zczc\",\n",
+    "    \"hmdt: 32\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "operators = {\n",
+    "    \"+\" : lambda a, b: a + b,\n",
+    "    \"-\" : lambda a, b: a - b,\n",
+    "    \"*\" : lambda a, b: a * b,\n",
+    "    \"/\" : lambda a, b: a / b,\n",
+    "}\n",
+    "\n",
+    "def day21part1(script: list):\n",
+    "    shout = {}\n",
+    "    ops = []\n",
+    "    for line in script:\n",
+    "        key, value = line.split(\": \")\n",
+    "        if len(value) != 11:\n",
+    "            shout[key] = int(value)\n",
+    "        else:\n",
+    "            ops.append((key, value))\n",
+    "\n",
+    "    while ops:\n",
+    "        for (monkey, op) in ops:\n",
+    "            if op[:4] in shout and op[-4:] in shout:\n",
+    "                shout[monkey] = operators[op[5]](shout[op[:4]], shout[op[-4:]])\n",
+    "                ops.remove((monkey, op))\n",
+    "\n",
+    "    return int(shout[\"root\"])\n",
+    "\n",
+    "day21part1(test_monkey_script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51928383302238"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_monkey_script = file_to_list(\"./inputs/input21.txt\")\n",
+    "day21part1(final_monkey_script)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 0, param: 19.80, error: 148.00, gradient: -1.00 update: 14.80\n",
+      "step: 20, param: 131.52, error: 86.91, gradient: -0.50 update: 4.35\n",
+      "step: 40, param: 198.86, error: 52.38, gradient: -0.50 update: 2.62\n",
+      "step: 60, param: 239.44, error: 31.57, gradient: -0.50 update: 1.58\n",
+      "step: 80, param: 263.90, error: 19.03, gradient: -0.50 update: 0.95\n",
+      "step: 100, param: 278.64, error: 11.47, gradient: -0.50 update: 0.57\n",
+      "step: 120, param: 287.52, error: 6.91, gradient: -0.50 update: 0.35\n",
+      "step: 140, param: 292.88, error: 4.17, gradient: -0.50 update: 0.21\n",
+      "step: 160, param: 296.10, error: 2.51, gradient: -0.50 update: 0.13\n",
+      "step: 180, param: 298.05, error: 1.51, gradient: -0.50 update: 0.08\n",
+      "step: 200, param: 299.22, error: 0.91, gradient: -0.50 update: 0.05\n",
+      "step: 220, param: 299.93, error: 0.55, gradient: -0.50 update: 0.03\n",
+      "step: 240, param: 300.35, error: 0.33, gradient: -0.50 update: 0.02\n",
+      "step: 260, param: 300.61, error: 0.20, gradient: -0.50 update: 0.01\n",
+      "step: 280, param: 300.77, error: 0.12, gradient: -0.50 update: 0.01\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "300.85499084887766"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day21part2(script: list):\n",
+    "    shout = {}\n",
+    "    ops = []\n",
+    "    for line in script:\n",
+    "        key, value = line.split(\": \")\n",
+    "        if len(value) != 11:\n",
+    "            shout[key] = int(value)\n",
+    "        else:\n",
+    "            if key == \"root\":\n",
+    "                value = f\"{value[:4]} - {value[-4:]}\"\n",
+    "            ops.append((key, value))\n",
+    "            \n",
+    "    def solve(param, shout, ops):\n",
+    "        shout[\"humn\"] = param\n",
+    "        while ops:\n",
+    "            for (monkey, op) in ops:\n",
+    "                if op[:4] in shout and op[-4:] in shout:\n",
+    "                    shout[monkey] = operators[op[5]](shout[op[:4]], shout[op[-4:]])\n",
+    "                    ops.remove((monkey, op))\n",
+    "        return abs(shout[\"root\"])\n",
+    "    \n",
+    "    # Gradient descent\n",
+    "    learning_rate = 0.1\n",
+    "    steps = 300\n",
+    "    param = shout[\"humn\"]\n",
+    "    previous_error = solve(param, copy.copy(shout), copy.copy(ops))\n",
+    "    update = 0\n",
+    "    for step in range(steps):\n",
+    "        error = solve(param, copy.copy(shout), copy.copy(ops))\n",
+    "        try:\n",
+    "            gradient = (error - previous_error) / (update)\n",
+    "        except ZeroDivisionError:\n",
+    "            gradient = 1 if error < previous_error else -1\n",
+    "        update = - (learning_rate * error * gradient)\n",
+    "        param += update\n",
+    "        previous_error = error\n",
+    "        if step % 20 == 0:\n",
+    "            print(\n",
+    "                f\"step: {step}, param: {param:.2f}, error: {error:.2f},\",\n",
+    "                f\"gradient: {gradient:.2f} update: {update:.2f}\"\n",
+    "            )\n",
+    "        if error < 0.05:\n",
+    "            break\n",
+    "\n",
+    "    return param\n",
+    "\n",
+    "day21part2(test_monkey_script)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: 0, param: 1791008086060.00, error: 17910080819200.00, gradient: -1.00 update: 1791008081920.00\n",
+      "step: 20, param: 3305669216439.17, error: 117598.51, gradient: -1.73 update: 20304.36\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3305669217840.0156"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day21part2(final_monkey_script)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Day 25: Full of Hot Air"
    ]
   },
@@ -2330,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2572,7 @@
        "'2=-1=0'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2378,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2611,7 @@
        "'2=0--0---11--01=-100'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
