--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -115,6 +115,152 @@
     "\n",
     "day1part2()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 2: Red-Nosed Reports\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_reports = [\n",
+    "    \"7 6 4 2 1\",\n",
+    "    \"1 2 7 8 9\",\n",
+    "    \"9 7 6 2 1\",\n",
+    "    \"1 3 2 4 5\",\n",
+    "    \"8 6 4 4 1\",\n",
+    "    \"1 3 6 7 9\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day2part1(reports):\n",
+    "    reports = [list(map(int, report.split(\" \"))) for report in reports]\n",
+    "    safe_count = 0\n",
+    "    for report in reports:\n",
+    "        if ((sorted(report, reverse=True) == report) or\n",
+    "            (sorted(report, reverse=False) == report)):\n",
+    "            diffs = [report[i+1] - report[i] for i in range(len(report)-1)]\n",
+    "            if (all(diff in {-3, -2, -1, 1, 2, 3} for diff in diffs)):\n",
+    "                safe_count += 1\n",
+    "    return(safe_count)\n",
+    "\n",
+    "day2part1(test_reports)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "663"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_reports = file_to_list(\"./inputs/input2.txt\")\n",
+    "day2part1(final_reports)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_safe(report):\n",
+    "    if ((sorted(report, reverse=True) == report) or\n",
+    "        (sorted(report, reverse=False) == report)):\n",
+    "            diffs = [report[i+1] - report[i] for i in range(len(report)-1)]\n",
+    "            if (all(diff in {-3, -2, -1, 1, 2, 3} for diff in diffs)):\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def day2part2(reports):\n",
+    "    reports = [list(map(int, report.split(\" \"))) for report in reports]\n",
+    "    safe_count = 0\n",
+    "    for report in reports:\n",
+    "        report_is_safe = False\n",
+    "        for i in range(len(report)):\n",
+    "            report_mutated = report[:i] + report[i+1 :]\n",
+    "            if is_safe(report_mutated):\n",
+    "                report_is_safe = True\n",
+    "        if report_is_safe:\n",
+    "             safe_count += 1\n",
+    "    return(safe_count)\n",
+    "\n",
+    "day2part2(test_reports)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "692"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day2part2(final_reports)"
+   ]
   }
  ],
  "metadata": {
