--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from collections import Counter\n",
     "from typing import List"
    ]
@@ -260,6 +261,145 @@
    ],
    "source": [
     "day2part2(final_reports)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3: Mull It Over\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_memory = \"xmul(2,4)%&mul[3,7]!@^do_not_mul(5,5)+mul(32,64]then(mul(11,8)mul(8,5))\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "161"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3_part1(memory):\n",
+    "    matches = re.findall(\"mul\\([0-9]+,[0-9]+\\)\", memory)\n",
+    "    sum = 0\n",
+    "    for match in matches:\n",
+    "        nums = list(map(int, match[4:-1].split(\",\")))\n",
+    "        sum += nums[0] * nums[1]\n",
+    "    return sum\n",
+    "\n",
+    "day3_part1(test_memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189527826"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_memory = open(\"./inputs/input3.txt\").read()\n",
+    "day3_part1(real_memory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_memory = \"xmul(2,4)&mul[3,7]!^don't()_mul(5,5)+mul(32,64](mul(11,8)undo()?mul(8,5))\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day3_part1(memory):\n",
+    "    pattern = \"(mul\\([0-9]+,[0-9]+\\))|(do\\(\\))|(don't\\(\\))\"\n",
+    "    matches = re.findall(pattern, memory)\n",
+    "    sum = 0\n",
+    "    do = True\n",
+    "    for match in matches:\n",
+    "        if match[1] == \"do()\":\n",
+    "            do = True\n",
+    "        elif match[2] == \"don't()\":\n",
+    "            do = False\n",
+    "        else:\n",
+    "            if do:\n",
+    "                nums = list(map(int, match[0][4:-1].split(\",\")))\n",
+    "                sum += nums[0] * nums[1]\n",
+    "    return sum\n",
+    "\n",
+    "day3_part1(test_memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63013756"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day3_part1(real_memory)"
    ]
   }
  ],
