--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -15,8 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "import numpy as np\n",
     "import re\n",
     "from collections import Counter\n",
+    "from functools import cmp_to_key\n",
     "from typing import List"
    ]
   },
@@ -274,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +295,7 @@
        "161"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +323,7 @@
        "189527826"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +360,7 @@
        "48"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -393,13 +396,409 @@
        "63013756"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "day3_part1(real_memory)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4: Ceres Search\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_word_search = [\n",
+    "    \"MMMSXXMASM\",\n",
+    "    \"MSAMXMSMSA\",\n",
+    "    \"AMXSXMAAMM\",\n",
+    "    \"MSAMASMSMX\",\n",
+    "    \"XMASAMXAMM\",\n",
+    "    \"XXAMMXXAMA\",\n",
+    "    \"SMSMSASXSS\",\n",
+    "    \"SAXAMASAAA\",\n",
+    "    \"MAMMMXMMMM\",\n",
+    "    \"MXMXAXMASX\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day4_part1(word_search):\n",
+    "    word_search = [[char for char in line] for line in word_search]\n",
+    "    word_search = np.array(word_search)\n",
+    "    count = 0\n",
+    "    for word_search in [word_search.copy(), np.flipud(word_search), np.fliplr(word_search)]:\n",
+    "        for _ in range(4):\n",
+    "            for line in word_search:\n",
+    "                line = \"\".join(line.tolist())\n",
+    "                count += len(re.findall(\"XMAS\", line))\n",
+    "            word_search = np.rot90(word_search)\n",
+    "    return count\n",
+    "\n",
+    "day4_part1(example_word_search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day4_part1(grid):\n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "    word = \"XMAS\"\n",
+    "    word_length = len(word)\n",
+    "    \n",
+    "    directions = [\n",
+    "        (0, 1),   # right\n",
+    "        (0, -1),  # left\n",
+    "        (1, 0),   # down\n",
+    "        (-1, 0),  # up\n",
+    "        (1, 1),   # down-right\n",
+    "        (1, -1),  # down-left\n",
+    "        (-1, 1),  # up-right\n",
+    "        (-1, -1)  # up-left\n",
+    "    ]\n",
+    "    count = 0\n",
+    "    for r in range(rows):\n",
+    "        for c in range(cols):\n",
+    "            # Only proceed if the first letter matches\n",
+    "            if grid[r][c] == word[0]:\n",
+    "                # Check each direction\n",
+    "                for dr, dc in directions:\n",
+    "                    # Check if we can find the whole word in this direction\n",
+    "                    found = True\n",
+    "                    for i in range(word_length):\n",
+    "                        rr = r + dr * i\n",
+    "                        cc = c + dc * i\n",
+    "                        # Check boundaries and character match\n",
+    "                        if not (0 <= rr < rows and 0 <= cc < cols and grid[rr][cc] == word[i]):\n",
+    "                            found = False\n",
+    "                            break\n",
+    "                    if found:\n",
+    "                        count += 1\n",
+    "    return count\n",
+    "\n",
+    "day4_part1(example_word_search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2297"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_word_search = file_to_list(\"./inputs/input4.txt\")\n",
+    "day4_part1(real_word_search)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day4_part2(grid):\n",
+    "    # Patterns for one diagonal\n",
+    "    mas = ['M', 'A', 'S']\n",
+    "    sam = ['S', 'A', 'M']\n",
+    "    # All combinations of diagonals\n",
+    "    diagonal_patterns = [\n",
+    "        (mas, mas),\n",
+    "        (mas, sam),\n",
+    "        (sam, mas),\n",
+    "        (sam, sam)\n",
+    "    ]\n",
+    "    \n",
+    "    rows = len(grid)\n",
+    "    cols = len(grid[0])\n",
+    "    \n",
+    "    count = 0\n",
+    "    \n",
+    "    # Iterate over every starting point of a 3x3 sub-grid\n",
+    "    for r in range(rows - 2):  # up to rows-3\n",
+    "        for c in range(cols - 2):  # up to cols-3\n",
+    "            # Extract diagonals\n",
+    "            # TL-BR diagonal\n",
+    "            diag1 = [grid[r][c], grid[r+1][c+1], grid[r+2][c+2]]\n",
+    "            # TR-BL diagonal\n",
+    "            diag2 = [grid[r][c+2], grid[r+1][c+1], grid[r+2][c]]\n",
+    "            \n",
+    "            # Check if (diag1, diag2) matches any allowed pattern\n",
+    "            for d1, d2 in diagonal_patterns:\n",
+    "                if diag1 == d1 and diag2 == d2:\n",
+    "                    count += 1\n",
+    "    \n",
+    "    return count\n",
+    "\n",
+    "day4_part2(example_word_search)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1745"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day4_part2(real_word_search)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5: Print Queue\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_rules = [\n",
+    "    \"47|53\",\n",
+    "    \"97|13\",\n",
+    "    \"97|61\",\n",
+    "    \"97|47\",\n",
+    "    \"75|29\",\n",
+    "    \"61|13\",\n",
+    "    \"75|53\",\n",
+    "    \"29|13\",\n",
+    "    \"97|29\",\n",
+    "    \"53|29\",\n",
+    "    \"61|53\",\n",
+    "    \"97|53\",\n",
+    "    \"61|29\",\n",
+    "    \"47|13\",\n",
+    "    \"75|47\",\n",
+    "    \"97|75\",\n",
+    "    \"47|61\",\n",
+    "    \"75|61\",\n",
+    "    \"47|29\",\n",
+    "    \"75|13\",\n",
+    "    \"53|13\"\n",
+    "]\n",
+    "test_updates = [\n",
+    "    \"75,47,61,53,29\",\n",
+    "    \"97,61,53,29,13\",\n",
+    "    \"75,29,13\",\n",
+    "    \"75,97,47,61,53\",\n",
+    "    \"61,13,29\",\n",
+    "    \"97,13,75,29,47\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "143"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5_part1(rules, updates):\n",
+    "    correct_updates = []\n",
+    "    for update in updates:\n",
+    "        update = update.split(\",\")\n",
+    "        correct = True\n",
+    "        for rule in rules:\n",
+    "            left, right = rule.split(\"|\")\n",
+    "            if (left in update) and (right in update):\n",
+    "                idx_left = update.index(left)\n",
+    "                idx_right = update.index(right)\n",
+    "                if idx_left > idx_right:\n",
+    "                    correct = False\n",
+    "        if correct == True:\n",
+    "            correct_updates.append(update)\n",
+    "    sum = 0\n",
+    "    for update in correct_updates:\n",
+    "        middle_number = int(update[len(update) //  2])\n",
+    "        sum += middle_number\n",
+    "    return sum\n",
+    "\n",
+    "day5_part1(test_rules, test_updates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6260"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_rules, final_updates = [block.split(\"\\n\") for block in file_to_list(\"./inputs/input5.txt\", sep = \"\\n\\n\")]\n",
+    "day5_part1(final_rules, final_updates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day5_part2(rules, updates):\n",
+    "    incorrect_updates = []\n",
+    "    for update in updates:\n",
+    "        update = update.split(\",\")\n",
+    "        correct = True\n",
+    "        for rule in rules:\n",
+    "            left, right = rule.split(\"|\")\n",
+    "            if (left in update) and (right in update):\n",
+    "                idx_left = update.index(left)\n",
+    "                idx_right = update.index(right)\n",
+    "                if idx_left > idx_right:\n",
+    "                    correct = False\n",
+    "        if correct == False:\n",
+    "            incorrect_updates.append(update)\n",
+    "    cmp = cmp_to_key(lambda x,y: 1-2*(x+'|'+y in rules))\n",
+    "    sum = 0\n",
+    "    for update in incorrect_updates:\n",
+    "        update = sorted(update, key = cmp)\n",
+    "        middle_number = int(update[len(update) //  2])\n",
+    "        sum += middle_number\n",
+    "    return sum\n",
+    "\n",
+    "day5_part2(test_rules, test_updates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5346"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day5_part2(final_rules, final_updates)"
    ]
   }
  ],
