--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -799,6 +799,127 @@
    ],
    "source": [
     "day5_part2(final_rules, final_updates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 6: Guard Gallivant\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_chart_input = [\n",
+    "    \"....#.....\",\n",
+    "    \".........#\",\n",
+    "    \"..........\",\n",
+    "    \"..#.......\",\n",
+    "    \".......#..\",\n",
+    "    \"..........\",\n",
+    "    \".#..^.....\",\n",
+    "    \"........#.\",\n",
+    "    \"#.........\",\n",
+    "    \"......#...\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Chart:\n",
+    "\n",
+    "    def __init__(self, chart):\n",
+    "        self.chart = np.array([list(row) for row in chart])\n",
+    "\n",
+    "    def get_position_guard(self):\n",
+    "        position = None\n",
+    "        if np.any(np.isin(self.chart, \">\")):\n",
+    "            position = np.where(self.chart == \">\")\n",
+    "        elif np.any(np.isin(self.chart, \"<\")):\n",
+    "            position = np.where(self.chart == \"<\")\n",
+    "        elif np.any(np.isin(self.chart, \"^\")):\n",
+    "            position = np.where(self.chart == \"^\")\n",
+    "        elif np.any(np.isin(self.chart, \"v\")):\n",
+    "            position = np.where(self.chart == \"v\")\n",
+    "        position = (position[0][0], position[1][0])\n",
+    "        return(position)\n",
+    "    \n",
+    "    def advance_guard(self):\n",
+    "        position = self.get_position_guard()\n",
+    "        direction = self.chart[position]\n",
+    "        if direction == \">\":\n",
+    "            new_position = (position[0], position[1] + 1)\n",
+    "        elif direction == \"<\":\n",
+    "            new_position = (position[0], position[1] - 1)\n",
+    "        elif direction == \"^\":\n",
+    "            new_position = (position[0] - 1, position[1])\n",
+    "        elif direction == \"v\":\n",
+    "            new_position = (position[0] + 1, position[1])\n",
+    "        if (new_position[0] > len(self.chart) - 1) or (new_position[1] > len(self.chart[1]) - 1):\n",
+    "            return(False)\n",
+    "        if self.chart[new_position] == \"#\":\n",
+    "            new_direction = {\"^\": \">\", \">\": \"v\", \"v\": \"<\", \"<\": \"^\"}.get(direction)\n",
+    "            new_position = position\n",
+    "        else:\n",
+    "            new_direction = direction\n",
+    "        self.chart[position] = \".\"\n",
+    "        self.chart[new_position] = new_direction\n",
+    "        return(True)\n",
+    "\n",
+    "\n",
+    "def day6_part1(chart: Chart):\n",
+    "    visited = set()\n",
+    "    visited.add(chart.get_position_guard())\n",
+    "    while chart.advance_guard():\n",
+    "        current_position = chart.get_position_guard()\n",
+    "        if current_position not in visited:\n",
+    "            visited.add(current_position)\n",
+    "    return len(visited)\n",
+    "\n",
+    "test_chart = Chart(test_chart_input)\n",
+    "day6_part1(test_chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4977"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_chart = Chart(file_to_list(\"./inputs/input6.txt\"))\n",
+    "day6_part1(final_chart)"
    ]
   }
  ],
