--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -20,6 +20,7 @@
     "import re\n",
     "from collections import Counter\n",
     "from functools import cmp_to_key\n",
+    "from itertools import product\n",
     "from typing import List"
    ]
   },
@@ -920,6 +921,157 @@
    "source": [
     "final_chart = Chart(file_to_list(\"./inputs/input6.txt\"))\n",
     "day6_part1(final_chart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 7: Bridge Repair\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_equations = [\n",
+    "    \"190: 10 19\",\n",
+    "    \"3267: 81 40 27\",\n",
+    "    \"83: 17 5\",\n",
+    "    \"156: 15 6\",\n",
+    "    \"7290: 6 8 6 15\",\n",
+    "    \"161011: 16 10 13\",\n",
+    "    \"192: 17 8 14\",\n",
+    "    \"21037: 9 7 18 13\",\n",
+    "    \"292: 11 6 16 20\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3749"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7_part1(equations):\n",
+    "    sum = 0\n",
+    "    for equation in equations:\n",
+    "        equation = equation.split(\": \")\n",
+    "        value = int(equation[0])\n",
+    "        nums = [int(num) for num in equation[1].split(\" \")]\n",
+    "        for ops in product(\"+*\", repeat=len(nums)-1):\n",
+    "            result = nums[0]\n",
+    "            for idx, op in enumerate(ops):\n",
+    "                match op:\n",
+    "                    case \"*\": result = result * nums[idx+1]\n",
+    "                    case \"+\": result = result + nums[idx+1]\n",
+    "            if result == value:\n",
+    "                sum += value\n",
+    "                break\n",
+    "    return(sum)\n",
+    "\n",
+    "day7_part1(test_equations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "465126289353"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_equations = file_to_list(\"./inputs/input7.txt\")\n",
+    "day7_part1(final_equations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11387"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day7_part2(equations):\n",
+    "    sum = 0\n",
+    "    for equation in equations:\n",
+    "        equation = equation.split(\": \")\n",
+    "        value = int(equation[0])\n",
+    "        nums = [int(num) for num in equation[1].split(\" \")]\n",
+    "        for ops in product(\"+*|\", repeat=len(nums)-1):\n",
+    "            result = nums[0]\n",
+    "            for idx, op in enumerate(ops):\n",
+    "                match op:\n",
+    "                    case \"*\": result = result * nums[idx+1]\n",
+    "                    case \"+\": result = result + nums[idx+1]\n",
+    "                    case \"|\": result = int(str(result) + str(nums[idx+1]))\n",
+    "            if result == value:\n",
+    "                sum += value\n",
+    "                break\n",
+    "    return(sum)\n",
+    "\n",
+    "day7_part2(test_equations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70597497486371"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day7_part2(final_equations)"
    ]
   }
  ],
