--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -20,7 +20,7 @@
     "import re\n",
     "from collections import Counter\n",
     "from functools import cmp_to_key\n",
-    "from itertools import product\n",
+    "from itertools import product, combinations\n",
     "from typing import List"
    ]
   },
@@ -1072,6 +1072,183 @@
    ],
    "source": [
     "day7_part2(final_equations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 8: Resonant Collinearity\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_chart = [\n",
+    "    \"............\",\n",
+    "    \"........0...\",\n",
+    "    \".....0......\",\n",
+    "    \".......0....\",\n",
+    "    \"....0.......\",\n",
+    "    \"......A.....\",\n",
+    "    \"............\",\n",
+    "    \"............\",\n",
+    "    \"........A...\",\n",
+    "    \".........A..\",\n",
+    "    \"............\",\n",
+    "    \"............\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_part1(chart):\n",
+    "    antenas = {}\n",
+    "    N = len(chart)\n",
+    "    M = len(chart[0])\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            freq = chart[i][j]\n",
+    "            if freq != \".\":\n",
+    "                l = antenas.get(freq, [])\n",
+    "                l.append((i, j))\n",
+    "                antenas[freq] = l\n",
+    "    antinodes = set()\n",
+    "    for freq in antenas.keys():\n",
+    "        coords = antenas[freq]\n",
+    "        for pair in combinations(coords, 2):\n",
+    "            dist_n = pair[0][0] - pair[1][0]\n",
+    "            dist_m = pair[0][1] - pair[1][1]\n",
+    "            beacon_1 = (pair[0][0] + dist_n, pair[0][1] + dist_m)\n",
+    "            beacon_2 = (pair[1][0] - dist_n, pair[1][1] - dist_m)\n",
+    "            if (0 <= beacon_1[0] < N) and (0 <= beacon_1[1] < M):\n",
+    "                # x, y = beacon_1\n",
+    "                # chart[x] = chart[x][:y] + \"#\" + chart[x][y+1:]\n",
+    "                antinodes.add(beacon_1)\n",
+    "            if (0 <= beacon_2[0] < N) and (0 <= beacon_2[1] < M):\n",
+    "                # x, y = beacon_2\n",
+    "                # chart[x] = chart[x][:y] + \"#\" + chart[x][y+1:]\n",
+    "                antinodes.add(beacon_2)\n",
+    "    # for row in chart:\n",
+    "    #     print(row)\n",
+    "    return len(antinodes)\n",
+    "\n",
+    "day8_part1(example_chart.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "273"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_chart = file_to_list(\"./inputs/input8.txt\")\n",
+    "day8_part1(final_chart.copy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day8_part2(chart):\n",
+    "    antenas = {}\n",
+    "    N = len(chart)\n",
+    "    M = len(chart[0])\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            freq = chart[i][j]\n",
+    "            if freq != \".\":\n",
+    "                l = antenas.get(freq, [])\n",
+    "                l.append((i, j))\n",
+    "                antenas[freq] = l\n",
+    "    antinodes = set()\n",
+    "    for freq in antenas.keys():\n",
+    "        coords = antenas[freq]\n",
+    "        for pair in combinations(coords, 2):\n",
+    "            dist_n = pair[0][0] - pair[1][0]\n",
+    "            dist_m = pair[0][1] - pair[1][1]\n",
+    "            # iterate a over a large enoough number to make sure we cover all possible antinodes\n",
+    "            for i in range(50):\n",
+    "                beacon_1 = (pair[0][0] + dist_n * i, pair[0][1] + dist_m * i)\n",
+    "                beacon_2 = (pair[1][0] - dist_n * i, pair[1][1] - dist_m * i)\n",
+    "                if (0 <= beacon_1[0] < N) and (0 <= beacon_1[1] < M):\n",
+    "                    antinodes.add(beacon_1)\n",
+    "                if (0 <= beacon_2[0] < N) and (0 <= beacon_2[1] < M):\n",
+    "                    antinodes.add(beacon_2)\n",
+    "    return len(antinodes)\n",
+    "\n",
+    "day8_part2(example_chart.copy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1017"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day8_part2(final_chart.copy())"
    ]
   }
  ],
