Add day 9 part 1

--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1250,6 +1250,176 @@
    "source": [
     "day8_part2(final_chart.copy())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 9: Disk Fragmenter\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_disk_map = \"2333133121414131402\"\n",
+    "example_disk_map = \"233313312141413140211\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2132"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9_part1(disk_map):\n",
+    "    # Represent the disk layout\n",
+    "    blocks = []\n",
+    "    id = 0\n",
+    "    free_space = True\n",
+    "    for digit in disk_map:\n",
+    "        if free_space is True:\n",
+    "            blocks += [str(id)] * int(digit)\n",
+    "            id += 1\n",
+    "        else:\n",
+    "            blocks += [\".\"] * int(digit)\n",
+    "        free_space = True if free_space is False else False\n",
+    "    # Compress the disk\n",
+    "    while True:\n",
+    "        try:\n",
+    "            idx = blocks.index(\".\")\n",
+    "            blocks[idx] = blocks[-1]\n",
+    "            blocks.pop()\n",
+    "        except ValueError:\n",
+    "            break\n",
+    "    # Compute checksum\n",
+    "    checksum = 0\n",
+    "    for idx, number in enumerate(blocks):\n",
+    "        checksum += int(idx) * int(number)\n",
+    "    return checksum\n",
+    "\n",
+    "day9_part1(example_disk_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6366665108136"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_disk_map = file_to_list(\"./inputs/input9.txt\")[0]\n",
+    "day9_part1(final_disk_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['00', '10', '2', '111', '99', '..', '777', '333', '.', '44', '.', '5555', '.', '6666', '.....', '8888', '.....']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3108"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day9_part2(disk_map):\n",
+    "    # Represent the disk layout\n",
+    "    blocks = []\n",
+    "    id = 0\n",
+    "    free_space = True\n",
+    "    for digit in disk_map:\n",
+    "        if free_space is True:\n",
+    "            if digit != \"0\":\n",
+    "                blocks += [str(id) * int(digit)]\n",
+    "            id += 1\n",
+    "        else:\n",
+    "            if digit != \"0\":\n",
+    "                blocks += [\".\" * int(digit)]\n",
+    "        free_space = True if free_space is False else False\n",
+    "    # Compress the disk\n",
+    "    for i, block in reversed([(idx, block) for idx, block in enumerate(blocks.copy()) if \".\" not in block]):\n",
+    "        for j, space in enumerate(blocks):\n",
+    "            if \".\" in space and len(space) >= len(block) and j < i:\n",
+    "                i = blocks.index(block)\n",
+    "                blocks[j] = block\n",
+    "                blocks.pop(i)\n",
+    "                blocks.insert(i, \".\" * len(block))\n",
+    "                if len(space) > len(block):\n",
+    "                    blocks.insert(j+1, \".\" * (len(space) - len(block)))\n",
+    "                break\n",
+    "        for k, space in enumerate(blocks):\n",
+    "            if k < len(blocks) - 1:\n",
+    "                if \".\" in space and \".\" in blocks[k+1]:\n",
+    "                    blocks[k] = blocks[k] + blocks.pop(k+1)\n",
+    "    print(blocks)\n",
+    "    # print(\"\".join(blocks))\n",
+    "    # Compute checksum\n",
+    "    checksum = 0\n",
+    "    for idx, block in enumerate(\"\".join(blocks)):\n",
+    "        if \".\" not in block:\n",
+    "            for digit in block:\n",
+    "                checksum += idx * int(digit)\n",
+    "    return checksum\n",
+    "\n",
+    "# Works\n",
+    "day9_part2(example_disk_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Doesn't work\n",
+    "# day9_part2(final_disk_map)"
+   ]
   }
  ],
  "metadata": {
