--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -18,7 +18,7 @@
     "import math\n",
     "import numpy as np\n",
     "import re\n",
-    "from collections import Counter\n",
+    "from collections import Counter, deque, namedtuple\n",
     "from functools import cmp_to_key\n",
     "from itertools import product, combinations\n",
     "from typing import List"
@@ -1413,12 +1413,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Doesn't work\n",
     "# day9_part2(final_disk_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 10: Hoof It\n",
+    "\n",
+    "### Part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_map = [\n",
+    "    \"89010123\",\n",
+    "    \"78121874\",\n",
+    "    \"87430965\",\n",
+    "    \"96549874\",\n",
+    "    \"45678903\",\n",
+    "    \"32019012\",\n",
+    "    \"01329801\",\n",
+    "    \"10456732\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10_part1(input_map):\n",
+    "    Node = namedtuple(\"Node\", [\"i\", \"j\"])\n",
+    "    trailheads = []\n",
+    "    for i in range(len(input_map)):\n",
+    "        for j in range(len(input_map[0])):\n",
+    "            if input_map[i][j] == \"0\":\n",
+    "                trailheads.append(Node(i, j))\n",
+    "    result = 0\n",
+    "    for trailhead in trailheads:\n",
+    "        score = 0\n",
+    "        # Breadth-first search\n",
+    "        queue = deque([trailhead])\n",
+    "        explored = set([trailhead])\n",
+    "        while queue:\n",
+    "            node = queue.popleft()\n",
+    "            if input_map[node.i][node.j] == \"9\":\n",
+    "                score += 1\n",
+    "            adjacent_nodes = [\n",
+    "                Node(node.i + 1, node.j),\n",
+    "                Node(node.i - 1, node.j),\n",
+    "                Node(node.i, node.j + 1),\n",
+    "                Node(node.i, node.j - 1)\n",
+    "            ]\n",
+    "            for adjacent in adjacent_nodes:\n",
+    "                if (0 <= adjacent.i < len(input_map)) and (0 <= adjacent.j < len(input_map[0])):\n",
+    "                    if adjacent not in explored:\n",
+    "                        current_value = int(input_map[node.i][node.j])\n",
+    "                        adjacent_value = int(input_map[adjacent.i][adjacent.j])\n",
+    "                        if adjacent_value == (current_value + 1):\n",
+    "                            explored.add(adjacent)\n",
+    "                            queue.append(adjacent)\n",
+    "        result += score\n",
+    "    return result\n",
+    "\n",
+    "day10_part1(example_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "717"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_map = file_to_list(\"./inputs/input10.txt\")\n",
+    "day10_part1(final_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day10_part2(input_map):\n",
+    "    Node = namedtuple(\"Node\", [\"i\", \"j\"])\n",
+    "    trailheads = []\n",
+    "    for i in range(len(input_map)):\n",
+    "        for j in range(len(input_map[0])):\n",
+    "            if input_map[i][j] == \"0\":\n",
+    "                trailheads.append(Node(i, j))\n",
+    "    result = 0\n",
+    "    for trailhead in trailheads:\n",
+    "        paths = []\n",
+    "        # Breadth-first search\n",
+    "        queue = deque([[trailhead]])\n",
+    "        while queue:\n",
+    "            path = queue.popleft()\n",
+    "            node = path[-1]\n",
+    "            if input_map[node.i][node.j] == \"9\":\n",
+    "                paths.append(path)\n",
+    "            adjacent_nodes = [\n",
+    "                Node(node.i + 1, node.j),\n",
+    "                Node(node.i - 1, node.j),\n",
+    "                Node(node.i, node.j + 1),\n",
+    "                Node(node.i, node.j - 1)\n",
+    "            ]\n",
+    "            for adjacent in adjacent_nodes:\n",
+    "                if (0 <= adjacent.i < len(input_map)) and (0 <= adjacent.j < len(input_map[0])):\n",
+    "                    current_value = int(input_map[node.i][node.j])\n",
+    "                    adjacent_value = int(input_map[adjacent.i][adjacent.j])\n",
+    "                    if adjacent_value == (current_value + 1):\n",
+    "                        new_path = list(path)\n",
+    "                        new_path.append(adjacent)\n",
+    "                        queue.append(new_path)\n",
+    "        result += len(paths)\n",
+    "    return result\n",
+    "\n",
+    "day10_part2(example_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1686"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day10_part2(final_map)"
    ]
   }
  ],
